--- a/views/paginado.pug
+++ b/views/paginado.pug
@@ -4,10 +4,17 @@ mixin paginado(href)
  - const paginas = Math.ceil(totalRegistros / limit); 
  - let ultimaPag= group*PAGES_CANTIDADxGRUPO
  - let primeraPag=ultimaPag-PAGES_CANTIDADxGRUPO+1
+ - console.log("primeraPag")
+ - console.log(primeraPag)
+ - console.log("segundaPag")
+ - console.log(ultimaPag)
  - const grupos=Math.ceil(paginas/PAGES_CANTIDADxGRUPO)
  - ultimaPag=ultimaPag>paginas?paginas:ultimaPag;
  nav(aria-label="Page navigation example")
    ul(class="pagination")
+     li(class="page-item")
+       a(class="page-link" href=`${href}?inputSearch=${inputSearch}&page=${page-1!=0?page-1:page}&group=${(group==1)?1:(group-1)}` aria-label="Previous")
+         span(aria-hidden="true") &laquo; 
      li(class="page-item")
        a(class="page-link" href=`${href}?inputSearch=${inputSearch}&page=${page-1!=0?page-1:page}&group=${page==primeraPag && group-1!=0?group-1:group}` aria-label="Previous")
          span(aria-hidden="true") &laquo; 
@@ -18,5 +25,7 @@ mixin paginado(href)
        a(class="page-link" href=page<=paginas?`${href}?inputSearch=${inputSearch}&page=${page+1<=paginas?page+1:page}&group=${page==ultimaPag && group+1<=grupos?group+1:group}`:"#" aria-label="Next")
          span(aria-hidden="true") &raquo;
      li(class="page-item")
-       a(class="page-link" href=paginas>ultimaPag?`${href}?inputSearch=${inputSearch}&page=${ultimaPag+1}`:"#" aria-label="Next")
+       a(class="page-link" href=paginas>ultimaPag?`${href}?inputSearch=${inputSearch}&page=${ultimaPag+1}&group=${group+1}`
+                                                 :"#" 
+                          aria-label="Next")
          span(aria-hidden="true") &raquo;
