--- a/views/tecBioq/menuLAteralMuestra.pug
+++ b/views/tecBioq/menuLAteralMuestra.pug
@@ -4,7 +4,7 @@ aside(class="d-flex position-fixed vh-100 " style="top: calc(var(--header-height
    li(class="nav-item")
     a.nav-link.btnEditar(href="#ancla1")
      p Editar
-     p determinación
+     p Muestra
    li(class="nav-item")
     a(class="nav-link" id="btnDeterminacion" href=`http://localhost:3000/tecBioq/detDelete/${determinacion.id}`) 
      p= determinacion.deletedAt?"Activar":"Desactivar"
