--- a/public/stylesheets/tecbioq/divContent.css
+++ b/public/stylesheets/tecbioq/divContent.css
@@ -1,4 +1,4 @@
-#divContent{
+.divContent{
     margin-top:3rem;
     padding: 20px;
     width: calc(100% - 240px); 
@@ -11,4 +11,11 @@
 
 .ocultoHijo {
   display:inherit;
+}
+
+#divContentLista{
+  margin: auto;
+  margin-top:3rem;
+  padding: 20px;
+  width: 60%;
 }
