--- a/public/stylesheets/tecbioq/formValorRef.css
+++ b/public/stylesheets/tecbioq/formValorRef.css
@@ -12,6 +12,8 @@
     border-top: 5px solid #261290;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.288);
     padding-bottom: 1.5rem;
+    width: 50%;
+    min-width: 300px;
 }
 
 .form-div-vr{
@@ -26,6 +28,12 @@
     margin-left:2rem ; 
   }
 
+  .form-div-vr input{
+    border:0 ;
+    outline: 0;
+    width: 100%;
+  }
+
   .valorRef{
     display: flex;
     margin-bottom: 2rem;
@@ -34,7 +42,7 @@
   .acciones{
     display: flex;
     flex-direction: column;
-    justify-content: end;
+    justify-content:space-between;
     margin-left: 30px;
     
   }
@@ -79,3 +87,5 @@
    /*  border:1px solid rgba(0, 0, 0, 0.2); */
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
      }
+
+  
