--- a/views/tecBioq/layout.pug
+++ b/views/tecBioq/layout.pug
@@ -14,14 +14,15 @@ html
       script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous")
       script(src="/socket.io/socket.io.js")
       script(src="/javascripts/socket-client.js")
+    block styles  
       link(rel='stylesheet', href='/stylesheets/tecbioq/body.css')
       link(rel='stylesheet', href='/stylesheets/tecbioq/style.css')
+      link(rel='stylesheet', href='/stylesheets/tecbioq/addCategDet.css')
       link(rel='stylesheet', href='/stylesheets/tecbioq/formExamen.css')
       link(rel='stylesheet', href='/stylesheets/tecbioq/menuLateralExamen.css')
       link(rel='stylesheet', href='/stylesheets/tecbioq/inputSearch.css')
       link(rel='stylesheet', href='/stylesheets/tecbioq/examenDatos.css')
       link(rel='stylesheet', href='/stylesheets/tecbioq/divContent.css')
-      link(rel='stylesheet', href='/stylesheets/tecbioq/addCategDet.css')
       link(rel='stylesheet', href='/stylesheets/tecbioq/formValorRef.css')
   body 
     header( style="top: 0; background-color: #f0f0f0;width:100%")
@@ -30,8 +31,8 @@ html
     
     main(class="d-flex  position-relative" )
       block aside
-      div(id="divContent" )
-        block content
+      block content
+       div(id="divContentLista" )
          include ./inputSearch.pug
          +inputSearch("/tecBioq","nombre/codigo a buscar","Crear Examen")
          include ./listaExamenes.pug
