--- a/views/tecBioq/navTop.pug
+++ b/views/tecBioq/navTop.pug
@@ -35,28 +35,7 @@ nav(class="navbar navbar-expand-lg bg-body-tertiary ")
        a.nav-link(href="http://localhost:3000/tecBioq/determinaciones"
                                   aria-expanded="false"
                                   role="button") Determinaciones
-       ul.dropdown-menu.dropdown-menu-end
-        li
-         a.dropdown-item(href="#") Agregar
-        li
-         a.dropdown-item(href="#") Another action
-        li
-         hr.dropdown-divider
-        li
-         a.dropdown-item(href="#") Something else here
-      
- 
-      li.nav-item.dropdown
-       a.nav-link.dropdown-toggle(href="#" 
-                                  role="button" 
-                                  data-bs-toggle="dropdown" 
-                                  aria-expanded="false") Valores de referencia
-       ul.dropdown-menu.dropdown-menu-end
-        li
-         a.dropdown-item(href="#") Agregar
-        li
-         a.dropdown-item(href="#") Another action
-        li
-         hr.dropdown-divider
-        li
-         a.dropdown-item(href="#") Something else here
+      li.nav-item
+       a.nav-link(href="http://localhost:3000/tecBioq/muestras"
+                                  aria-expanded="false"
+                                  role="button") Muestras                            
