--- a/views/tecBioq/navTop.pug
+++ b/views/tecBioq/navTop.pug
@@ -38,4 +38,8 @@ nav(class="navbar navbar-expand-lg bg-body-tertiary ")
       li.nav-item
        a.nav-link(href="http://localhost:3000/tecBioq/muestras"
                                   aria-expanded="false"
-                                  role="button") Muestras                            
+                                  role="button") Muestras  
+      li.nav-item
+       a.nav-link(href="http://localhost:3000/tecBioq/ordenes"
+                                  aria-expanded="false"
+                                  role="button") Cargar resultados                                                      
