--- a/views/administrador/menuLateral.pug
+++ b/views/administrador/menuLateral.pug
@@ -2,7 +2,7 @@ aside(class="d-flex position-fixed vh-100 " style="top: 3rem;")
  nav(class="nav flex-column bg-light p-3" style="width: 200px;")
   ul(class="bd-links-nav list-unstyled mb-0 pb-3 pb-md-2 pe-lg-2")
    li(class="nav-item")
-    a(class="nav-link" id="btnInicio")= `Información de ${usuario.apellido}`
+    a(class="nav-link" id="btnInicio")= `Información de ${usuario.nombre} ${usuario.apellido}`
    li(class="nav-item")
     a(class="nav-link" id="btnEditar") Editar
    li(class="nav-item")
