--- a/views/login/index.pug
+++ b/views/login/index.pug
@@ -10,11 +10,10 @@ html
            crossorigin="anonymous")
     script(src="https://accounts.google.com/gsi/client")            
   body
-
     .container
         .row.justify-content-center 
             .col-5.card
-                .row.my-5    
+                .row.my-5 
                     .row.justify-content-md-center
                         .col.col-md-auto
                             i(class="bi bi-person")
@@ -25,10 +24,10 @@ html
                                     | Registro
                                 else    
                                     | Iniciar sesión
-                    if msg 
-                        .row.justify-content-md-center
-                            .col.col-md-auto
-                                h6(class="card-subtitle")= msg        
+                    if msg
+                     .row.justify-content-md-center
+                      .col.col-md-auto
+                       h6(class=`card-subtitle ${(registro || error) ? 'text-danger' : 'text-success'}`)= msg        
                 .row 
                     .col           
                         form(action=ruta?ruta:'/' method='post')
@@ -63,21 +62,19 @@ html
                                                 | Contraseña:
                                         .col-auto.mt-3
                                             input(class="form-control" type="password" placeholder="Repita la contraseña" id="pass2" name="pass2")
-                                .row.justify-content-md-center.mt-5
+                                .row.justify-content-md-center.mt-5#divMsgError   
                                     .col 
-                                        
-                                         div(id="g_id_onload"
-                                             data-client_id="961283639807-dbu75hn2c1eckvf47ho7lltkhi7an950.apps.googleusercontent.com"
-                                             data-auto_prompt="false"
-                                             data-callback="handleCredentialResponse") 
-                                                                   
-                                         div(class="g_id_signin"
-                                             data-type="standard"
-                                             data-size="large"
-                                             data-theme="outline"
-                                             data-text="sign_in_with"
-                                             data-shape="rectangular"
-                                             data-logo_alignment="left")
+                                     div(id="g_id_onload"
+                                         data-client_id="961283639807-dbu75hn2c1eckvf47ho7lltkhi7an950.apps.googleusercontent.com"
+                                         data-auto_prompt="false"
+                                         data-callback="handleCredentialResponse") 
+                                     div(class="g_id_signin"
+                                         data-type="standard"
+                                         data-size="large"
+                                         data-theme="outline"
+                                         data-text="sign_in_with"
+                                         data-shape="rectangular"
+                                         data-logo_alignment="left")
                                     .col.d-flex.justify-content-center
                                         button( class="btn btn-outline-secondary ")
                                             if registro
@@ -118,6 +115,31 @@ html
                 console.log("rta: ",res);
                if (res.redirected) 
                   window.location = res.url;  
+                if (!res.ok) {
+                    return res.json();
+                }
+            })
+            .then(data => {
+               if (data) { // Verificar que data existe
+               console.log("Error:", data.msg);
+               const divMsgError = document.querySelector('#divMsgError');
+               const msgError = document.querySelector('#msgError');
+               if(msgError) msgError.remove();
+               const div = document.createElement('div');
+               div.id="msgError";
+               div.classList.add('row', 'justify-content-md-center');
+               div.innerHTML = `
+                   <div class="col col-md-auto">
+                       <h6 class="card-subtitle text-danger">${data.msg}</h6>
+                   </div>`;
+               divMsgError.appendChild(div);
+          }
+
+           google.accounts.id.initialize({
+             client_id: '961283639807-dbu75hn2c1eckvf47ho7lltkhi7an950.apps.googleusercontent.com',
+             callback: handleCredentialResponse
+           });
+           google.accounts.id.prompt();
             })
            .catch(err=>{console.log(err)})
 
