--- a/views/paginado.pug
+++ b/views/paginado.pug
@@ -1,31 +1,32 @@
 mixin paginado(href)
  //page viene del servidor
- - page=parseInt(page)
- - const paginas = Math.ceil(totalRegistros / limit); 
- - let ultimaPag= group*PAGES_CANTIDADxGRUPO
- - let primeraPag=ultimaPag-PAGES_CANTIDADxGRUPO+1
- - console.log("primeraPag")
- - console.log(primeraPag)
- - console.log("segundaPag")
- - console.log(ultimaPag)
- - const grupos=Math.ceil(paginas/PAGES_CANTIDADxGRUPO)
- - ultimaPag=ultimaPag>paginas?paginas:ultimaPag;
+ //- page=parseInt(page)
+ //- const paginas = Math.ceil(totalRegistros / limit); 
+ //- let ultimaPag= group*PAGES_CANTIDADxGRUPO
+ //- let primeraPag=ultimaPag-PAGES_CANTIDADxGRUPO+1
+ //- console.log("primeraPag")
+ //- console.log(primeraPag)
+ //- console.log("segundaPag")
+ //- console.log(ultimaPag)
+ //- const grupos=Math.ceil(paginas/PAGES_CANTIDADxGRUPO)
+ //- ultimaPag=ultimaPag>paginas?paginas:ultimaPag;
+ - finHref=href.includes('?') ? '&' : '?'
  nav(aria-label="Page navigation example")
    ul(class="pagination")
      li(class="page-item")
-       a(class="page-link" href=`${href}?inputSearch=${inputSearch}&page=${page-1!=0?page-1:page}&group=${(group==1)?1:(group-1)}` aria-label="Previous")
+       a(class="page-link" href=`${href}${finHref}inputSearch=${inputSearch}&page=${page-1!=0?page-1:page}&group=${(group==1)?1:(group-1)}` aria-label="Previous")
          span(aria-hidden="true") &laquo; 
      li(class="page-item")
-       a(class="page-link" href=`${href}?inputSearch=${inputSearch}&page=${page-1!=0?page-1:page}&group=${page==primeraPag && group-1!=0?group-1:group}` aria-label="Previous")
+       a(class="page-link" href=`${href}${finHref}inputSearch=${inputSearch}&page=${page-1!=0?page-1:page}&group=${page==primeraPag && group-1!=0?group-1:group}` aria-label="Previous")
          span(aria-hidden="true") &laquo; 
      - for (i=primeraPag; i <= ultimaPag ; i++)
        li(class=`page-item ${i === page ? 'active' : ''}`)
-         a(class="page-link" href=`${href}?inputSearch=${inputSearch}&page=${i}&group=${group}`)=  i    
+         a(class="page-link" href=`${href}${finHref}inputSearch=${inputSearch}&page=${i}&group=${group}`)=  i    
      li(class="page-item")
-       a(class="page-link" href=page<=paginas?`${href}?inputSearch=${inputSearch}&page=${page+1<=paginas?page+1:page}&group=${page==ultimaPag && group+1<=grupos?group+1:group}`:"#" aria-label="Next")
+       a(class="page-link" href=page<=paginas?`${href}${finHref}inputSearch=${inputSearch}&page=${page+1<=paginas?page+1:page}&group=${page==ultimaPag && group+1<=grupos?group+1:group}`:"#" aria-label="Next")
          span(aria-hidden="true") &raquo;
      li(class="page-item")
-       a(class="page-link" href=paginas>ultimaPag?`${href}?inputSearch=${inputSearch}&page=${ultimaPag+1}&group=${group+1}`
+       a(class="page-link" href=paginas>ultimaPag?`${href}${finHref}inputSearch=${inputSearch}&page=${ultimaPag+1}&group=${group+1}`
                                                  :"#" 
                           aria-label="Next")
          span(aria-hidden="true") &raquo;
