--- a/views/administrador2/navTop.pug
+++ b/views/administrador2/navTop.pug
@@ -1,4 +1,5 @@
 nav(class="navbar navbar-expand-lg bg-body-tertiary ")
+  - console.log("paka") 
   .container-fluid.d-flex.justify-content-between
    div.position-absolute.top-0.start-0
     a.navbar-brand(href="/tecBioq") 
@@ -40,4 +41,4 @@ nav(class="navbar navbar-expand-lg bg-body-tertiary ")
       li.nav-item
        a.nav-link(href="http://localhost:3000/admins2/muestras"
                                   aria-expanded="false"
-                                  role="button") Ordenes 
+                                  role="button") Ordenes                           
