--- a/views/administrador2/layout.pug
+++ b/views/administrador2/layout.pug
@@ -1,5 +1,6 @@
 doctype html
 html
+  - console.log("paja3")
   head
     title= title 
     //- title lo envía el server o no {title:"mi title"}
@@ -34,7 +35,7 @@ html
       block content
        div(id="divContentLista")
          include ../tecBioq/inputSearch.pug
-         +inputSearch("/admins2","apellido/email/DNI a buscar","Registrar","/admins2/form")
+         +inputSearch("/admins2","apellido/email/DNI a buscar","Registrar",`/admins2/form?rol=${encodeURIComponent('Bioquímico')}`)
          include ./listaBioquimicos.pug
         
     footer
